--- a/roles/homer/tasks/assets.yml
+++ b/roles/homer/tasks/assets.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create the icons folder
   file:
-    path: "{{ docker_dir }}/{{ container_name }}/tools/homer-icons"
+    path: "{{ docker_dir }}/homer/tools/homer-icons"
     state: directory
     mode: "0755"
     owner: "{{ username }}"
@@ -9,25 +9,24 @@
 
 - name: Copy the icons
   copy:
-    src: files/icons/{{ item.path.split('/')[-1] }}.png
-    dest: "{{ docker_dir }}/{{ container_name }}/tools/homer-icons"
+    src: files/icons/{{ item }}.png
+    dest: "{{ docker_dir }}/homer/tools/homer-icons"
     owner: "{{ username }}"
     group: "{{ username }}"
     mode: "0644"
-  when: lookup('vars', 'enable_' + item.path.split('/')[-1]) | default(False) and lookup('vars', item.path.split('/')[-1])['dashboard_url'] is defined
-  with_items: "{{ containers.files }}"
+  when: lookup('vars', item)['dashboard_url'] is defined
+  loop: "{{ containers }}"
 
 - name: Copy the icons for other dashboard elements
   copy:
     src: files/icons/{{ item }}
-    dest: "{{ docker_dir }}/{{ container_name }}/tools/homer-icons"
+    dest: "{{ docker_dir }}/homer/tools/homer-icons"
     owner: "{{ username }}"
     group: "{{ username }}"
     mode: "0644"
-  with_items:
+  loop:
     - cockpit.png
     - pihole.png
-    - pikvm.png
     - linuxserver.png
     - ispanico.png
     - rclone.png
@@ -35,7 +34,7 @@
 - name: Copy the logo
   copy:
     src: files/icons/logo.png
-    dest: "{{ docker_dir }}/{{ container_name }}/tools/homer-icons"
+    dest: "{{ docker_dir }}/homer/tools/homer-icons"
     owner: "{{ username }}"
     group: "{{ username }}"
     mode: "0644"
@@ -43,7 +42,7 @@
 - name: Copy the custom stylesheet
   copy:
     src: files/custom.css
-    dest: "{{ docker_dir }}/{{ container_name }}"
+    dest: "{{ docker_dir }}/homer"
     owner: "{{ username }}"
     group: "{{ username }}"
     mode: "0644"
@@ -51,7 +50,7 @@
 - name: Generate the Homer config file
   template:
     src: config.yml.j2
-    dest: "{{ docker_dir }}/{{ container_name }}/config.yml"
+    dest: "{{ docker_dir }}/homer/config.yml"
     owner: "{{ username }}"
     group: "{{ username }}"
     mode: "0644"
