--- a/roles/homer/tasks/docker.yml
+++ b/roles/homer/tasks/docker.yml
@@ -10,7 +10,7 @@
     state: started
     user: "{{ guid }}:{{ guid }}"
     volumes:
-      - "{{ docker_dir }}/{{ container_name }}:/www/assets"
+      - "{{ docker_dir }}/homer:/www/assets"
     restart_policy: unless-stopped
 
 - name: Make sure cors-container is created and running
