--- a/roles/influxdb/defaults/main.yml
+++ b/roles/influxdb/defaults/main.yml
@@ -1,8 +1,5 @@
 ---
-container_name: influxdb
-
-dashboard_url: https://influxdb.{{ host_local }}/
-
-homer_category: system
-
-dashboard_name: InfluxDB
+influxdb_container_name: influxdb
+influxdb_dashboard_url: https://influxdb.{{ host_local }}/
+influxdb_homer_category: system
+influxdb_dashboard_name: InfluxDB
