--- a/roles/lidarr/defaults/main.yml
+++ b/roles/lidarr/defaults/main.yml
@@ -1,6 +1,4 @@
 ---
-container_name: lidarr
-
-dashboard_url: https://lidarr.{{ host_local }}
-
-homer_category: servarr
+lidarr_container_name: lidarr
+lidarr_dashboard_url: https://lidarr.{{ host_local }}
+lidarr_homer_category: servarr
