--- a/roles/speedtest_tracker/tasks/main.yml
+++ b/roles/speedtest_tracker/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Craete the necessary {{ container_name }} database
+- name: Craete the necessary Speedtest Tracker database
   file:
     path: "{{ docker_dir }}/{{ container_name }}"
     state: directory
@@ -7,7 +7,7 @@
     group: "{{ guid }}"
     mode: "0755"
 
-- name: Make sure that {{ container_name }}-mariadb container is created and running
+- name: Make sure that speedtest_tracker-mariadb container is created and running
   docker_container:
     name: "{{ container_name }}-db"
     image: linuxserver/mariadb
@@ -27,7 +27,7 @@
     volumes:
       - "{{ docker_dir }}/{{ container_name }}/data:/config"
 
-- name: Make sure that {{ container_name }} container is created and running
+- name: Make sure that Speedtest tracker container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: lscr.io/linuxserver/speedtest-tracker:latest
