--- a/tasks/ssh_juggle_port.yml
+++ b/tasks/ssh_juggle_port.yml
@@ -57,7 +57,8 @@
     - _ssh_port_default_cred_result is failed
 
 - name: SSH Port Juggle | Fail
-  fail: msg="Neither the configured ansible_port {{ ansible_port }} nor the fallback port 22 were reachable"
+  fail:
+    msg: Neither the configured ansible_port {{ ansible_port }} nor the fallback port 22 were reachable
   when:
     - _ssh_port_result is failed
     - _ssh_port_default_result is defined
