--- a/roles/swag/tasks/install_configs.yml
+++ b/roles/swag/tasks/install_configs.yml
@@ -10,7 +10,6 @@
     mode: "0755"
   with_items:
     - internal
-#    - public
 
 - name: Install the SWAG config files
   template:
@@ -25,7 +24,7 @@
     - templates/public/*.j2
   notify:
     - restart swag
-  #    - test nginx
+    - test nginx
   register: swag_config
 
 - name: Create a list of variables files that were deployed
@@ -38,7 +37,6 @@
   find:
     paths:
       - "{{ docker_dir }}/swag/internal/nginx/proxy-confs/"
-    #      - "{{ docker_dir }}/swag/public/nginx/proxy-confs/"
     patterns:
       - .*\.conf(?!\.sample)
     use_regex: true
@@ -53,7 +51,7 @@
   with_items: "{{ found_files['files'] }}"
   notify:
     - restart swag
-#    - test nginx
+    - test nginx
 
 - name: Create the DNS conf folder
   file:
