feat: adding Immich

--- a/roles/lidarr/defaults/main.yml
+++ b/roles/lidarr/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
 lidarr_container_name: lidarr
 lidarr_dashboard_url: https://lidarr.{{ host_local }}
+lidarr_dashboard_name: Lidarr
 lidarr_homer_category: servarr
