--- a/tasks/list_services.yml
+++ b/tasks/list_services.yml
@@ -11,13 +11,12 @@
 
 - name: Populate the dictionary of all containers
   set_fact:
-    web_applications: >
-      "{{ web_applications | default([]) + [{'logo': '/assets/tools/homer-icons/' + item + '.png', 'name': lookup('vars', item)[item + '_dashboard_name']
-      | default(item | title), 'url': lookup('vars', item)[item + '_dashboard_url'] | default(''), 'endpoint': lookup('vars', item)[item + '_health_url'] |
-      default(''), 'category': lookup('vars', item)[item + '_homer_category'] | default('')}] }}"
+    web_applications: "{{ web_applications | default([]) + [{'name': item, 'logo': '/assets/tools/homer-icons/' + item + '.png', 'dashboard': lookup('vars', item)[item
+      + '_dashboard_name'] | default(item), 'url': lookup('vars', item)[item + '_dashboard_url'] | default(''), 'endpoint': lookup('vars', item)[item + '_health_url']
+      | default(''), 'category': lookup('vars', item)[item + '_homer_category'] | default('')}] }}"
   loop: "{{ containers }}"
 
 - name: Populate the URL dictionary with all containers
   set_fact:
-    swag_urls: "{{ swag_urls | default({}) | combine({item: lookup('vars', item)['dashboard_url'] | default('') | regex_replace('https?://|/*', '')}) }}"
-  loop: "{{ containers }}"
+    swag_urls: "{{ swag_urls | default({}) | combine({item.name: item.url | regex_replace('https?://|/*', '')}) }}"
+  loop: "{{ web_applications }}"
